refactor swagger info version 1.1.0
## version : 1.0.0 | release date : 19/07/2023
- first creating the project
- create controller (login, user, product)

## version : 1.1.0 | release date : 21/07/2023
- implement swagger-cli
- implement swagger annotation on main.go
- implement swagger annotation on controller
- configure app info for swagger-ui
- configure controller for swagger-ui
